# covid-19-rust-form

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  gulpfile.js  index.html  index.js  init.sql  package.json
api/: Cargo.toml  wait-for.sh
api/src/: lib.rs  main.rs  models.rs
client/: Dockerfile  index.html  index.js  package-lock.json  package.json
client/src/: index.html
client/src/css/: mustard-ui.css
client/src/css/critical/: adjustments.css  mustard-ui-critical.css
client/src/js/: cepHandler.js
src/: database.rs  index.html  lib.rs  main.rs  models.rs  schema.rs
src/css/: mustard-ui.css  spinner.css  style.css  toggles2020.css
src/css/critical/: mustard-ui-critical.css  style.css
src/js/: captchaLogic.js  index.js
