[package]
name = "covid-survey"
version = "0.1.0"
authors = ["Leinvedan <fontebasso.lemos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "2.0.0", features = ["openssl"] }
actix-rt = "1"
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.5"